Add manager view

--- a/WebApp/Templates/Form/form_BuyForm.html
+++ b/WebApp/Templates/Form/form_BuyForm.html
@@ -18,7 +18,7 @@
                 <form action="" method="post" action="" enctype="multipart/form-data">
                     <div>
                         <div>
-                            <p><span class="fa fa-warning"></span> Bạn có chắc là muốn mua sản phẩm "<b>{{item.product.title}}</b>" với số lượng <b>"{{item.num}}"</b></p>
+                            <p><span class="glyphicon glyphicon-alert"></span> Bạn có chắc là muốn mua sản phẩm "<b>{{item.product.title}}</b>" với số lượng <b>"{{item.num}}"</b></p>
                             <p align="center">Đồng ý xin vui lòng nhấn <b>"Agree"</b> | Không đồng ý nhấn <b>"Ignore"</b></p>
                         </div>
                     </div>
