--- a/webapp/templates/Base_ViewDetail.html
+++ b/webapp/templates/Base_ViewDetail.html
@@ -2,13 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+          integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 <body>
-    <div>
+    {% include 'NavigationBar/nav.html' %}
+    <br>
+    <br>
+    <br>
+    <div class="container">
         {% for obj in id_sanpham %}
-        {{obj.id}}
-        {{obj.description}}
+        <div class="row">
+            <div class="col-md-4" style="border: 1px solid grey" align="center">
+                <img src="{{ obj.img.url }}">
+            </div>
+            <div class="col-md-6">
+                <p><b>{{ obj.title }}</b></p>
+                <p>{{obj.description}}</p>
+                <p><b>Giá sản phẩm:</b> {{ obj.price|floatformat:'-1' }} VNĐ</p>
+                <hr>
+                <button type="button" class="btn btn-success btn-block">
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart3" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+                    </svg>
+                    <a title="Add Cart" href="{% url 'Page:page_login' %}" style="text-decoration: none">Add Cart</a>
+                </button>
+            </div>
+        </div>
         {% endfor %}
     </div>
+<!--    <div>-->
+<!--        {% for obj in id_sanpham %}-->
+<!--        <a href="" style="text-decoration:none">-->
+<!--            <img src="{{ obj.img.url }}">-->
+<!--        </a>-->
+<!--        {{obj.id}}-->
+<!--        {{obj.description}}-->
+<!--        {% endfor %}-->
+<!--    </div>-->
 </body>
 </html>
