--- a/WebApp/Templates/Manager_View.html
+++ b/WebApp/Templates/Manager_View.html
@@ -46,10 +46,10 @@
                     <tr>
                         <td class="w3-center">{{forloop.counter}}</td>
                         <td>{{item.id_user}}&nbsp
-                            <span class="glyphicon glyphicon-info-sign" onclick="document.getElementById('userInfo').style.display='block'"
+                            <span class="glyphicon glyphicon-info-sign" onclick="document.getElementById('{{item.id}}').style.display='block'"
                                   class="w3-button w3-black" style="color: #0077b3" data-toggle="tooltip" title="Thông tin User">
                             </span>
-                            <div id="userInfo" class="w3-modal">
+                            <div id="{{item.id}}" class="w3-modal">
                                 <div class="w3-modal-content">
                                     {% include 'Form/form_userInfo.html'%}
                                 </div>
@@ -57,6 +57,14 @@
                         </td>
                         <td class="w3-center">
                             {{item.id_cart.CreateAt}}
+                            <span class="glyphicon glyphicon-info-sign" onclick="document.getElementById('id{{item.id}}').style.display='block'"
+                                  class="w3-button w3-black" style="color: #0077b3" data-toggle="tooltip" title="Thông tin User">
+                            </span>
+                            <div id="id{{item.id}}" class="w3-modal">
+                                <div class="w3-modal-content">
+                                    {% include 'Form/form_productInfo.html'%}
+                                </div>
+                            </div>
                         </td>
                         <td class="w3-center">
                             {{item.address}}
