--- a/WebApp/Templates/Form/form_cancelOrder.html
+++ b/WebApp/Templates/Form/form_cancelOrder.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <header class="w3-container w3-light-blue">
-        <span onclick="document.getElementById('{{item.id}}').style.display='none'"
+        <span onclick="document.getElementById('id{{item.id}}').style.display='none'"
           class="w3-button w3-display-topright">&times;</span>
-        <h4 align="center" style="color: #000099"><strong>Thông báo từ sản phẩm {{item.id_product}}</strong></h4>
+        <h4 align="center" style="color: #000099"><strong>Thông báo</strong></h4>
     </header>
 
     <div class="w3-container">
@@ -17,7 +17,7 @@
                 <form action="" method="post" action="" enctype="multipart/form-data">
                     <div>
                         <div>
-                            <p><span class="fa fa-warning"></span> Bạn có chắc là hủy mua sản phẩm "<b>{{item.id_product}}</b>" với số lượng <b>"{{item.num}}"</b></p>
+                            <p><span class="fa fa-warning"></span> Bạn có chắc là hủy đơn hàng</p>
                             <p align="center">Đồng ý xin vui lòng nhấn <b>"Agree"</b> | Không đồng ý nhấn <b>"Ignore"</b></p>
                         </div>
                     </div>
@@ -25,10 +25,10 @@
             <hr>
         </div>
         <div align="right">
-            <a href="{% url 'Page:page_DeleteCart' user.id item.id %}"
+            <a href="{% url 'Page:page_cancelOrder' user.id item.id %}"
                class="w3-button w3-blue w3-tiny w3-padding-small w3-round-xlarge" style="text-decoration:none"><b style="font-size:12px">Accept</b>
             </a>
-            <span onclick="document.getElementById('{{item.id}}').style.display='none'" class="w3-button w3-blue w3-tiny w3-padding-small w3-round-xlarge">
+            <span onclick="document.getElementById('id{{item.id}}').style.display='none'" class="w3-button w3-blue w3-tiny w3-padding-small w3-round-xlarge">
                 <b style="font-size:12px">Ignore</b>
             </span>
         </div>
