--- a/webapp/templates/NavigationBar/Register_Page.html
+++ b/webapp/templates/NavigationBar/Register_Page.html
@@ -64,33 +64,33 @@
                                 {{form.fullname}}
                             </div>
 
-                            <div class="form-group form-control">
-                                <div class = "information">
-                                    {{form.address.label}}
-                                </div>
-                                {{form.address}}
-                            </div>
+<!--                            <div class="form-group form-control">-->
+<!--                                <div class = "information">-->
+<!--                                    {{form.address.label}}-->
+<!--                                </div>-->
+<!--                                {{form.address}}-->
+<!--                            </div>-->
 
-                            <div class="form-group form-control">
-                                <div class = "information">
-                                    {{form.age.label}}
-                                </div>
-                                {{form.age}}
-                            </div>
+<!--                            <div class="form-group form-control">-->
+<!--                                <div class = "information">-->
+<!--                                    {{form.age.label}}-->
+<!--                                </div>-->
+<!--                                {{form.age}}-->
+<!--                            </div>-->
 
-                            <div class="form-group form-control">
-                                <div class = "information">
-                                    {{form.sexual.label}}
-                                </div>
-                                {{form.sexual}}
-                            </div>
+<!--                            <div class="form-group form-control">-->
+<!--                                <div class = "information">-->
+<!--                                    {{form.sexual.label}}-->
+<!--                                </div>-->
+<!--                                {{form.sexual}}-->
+<!--                            </div>-->
 
-                            <div class="form-group form-control">
-                                <div class = "information">
-                                    {{form.phone.label}}
-                                </div>
-                                {{form.phone}}
-                            </div>
+<!--                            <div class="form-group form-control">-->
+<!--                                <div class = "information">-->
+<!--                                    {{form.phone.label}}-->
+<!--                                </div>-->
+<!--                                {{form.phone}}-->
+<!--                            </div>-->
 
                             <div class="col-md-12 text-center start-button">
                                 <button type="submit" class = "mb-3 btn btn-block mybtn btn-primary tx-tfm" value="Đăng ký">Start Explore Now !</button>
