--- a/webapp/templates/NavigationBar/nav_User_or_Manager.html
+++ b/webapp/templates/NavigationBar/nav_User_or_Manager.html
@@ -58,7 +58,7 @@
             <a href="{% url 'Page:page_BaseViewCart' user.id %}" class="w3-padding-large w3-hover-red w3-hide-small w3-right">
                 <strong>
                     <span class="fa fa-shopping-cart"></span>
-                    <span class="badge badge-warning" id='lblCartCount' style="background:#999">{% if numberOfCart != None %}{{numberOfCart}}{% endif %}</span>
+                    <span class="badge badge-warning" id='lblCartCount' style="background:#999"></span>
                 </strong>
             </a>
             <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
