--- a/WebApp/Templates/User_View.html
+++ b/WebApp/Templates/User_View.html
@@ -31,11 +31,21 @@
                                 View Detail
                             </a>
                         </div>
-                        <div class = "w3-col w3-card w3-margin-top w3-padding-16 w3-half w3-hover-shadow">
-                            <a href="{% url 'Page:page_AddCart' obj.id user.id %}" role="button" style="text-decoration: none;">
-                                Add Cart
-                            </a>
-                        </div>
+                        <form action="{% url 'Page:page_AddCart' obj.id user.id %}" method="POST" enctype="multipart/form-data">
+                            {% csrf_token %}
+<!--                            <div class = "w3-col w3-card w3-margin-top w3-padding-16 w3-half w3-hover-shadow">-->
+<!--                                <a href="{% url 'Page:page_AddCart' obj.id user.id %}" role="button" style="text-decoration: none;">-->
+<!--                                    Add Cart-->
+<!--                                </a>-->
+<!--                            </div>-->
+                            <div>
+                                <button type="submit">AddCart</button>
+                            </div>
+                            <div>
+                                Số lượng:
+                                <textarea name="numberInputText">1</textarea>
+                            </div>
+                        </form>
                     </div>
 
                 </div>
