--- a/Web_Project/WebApp/Templates/NavigationBar/Login_Page.html
+++ b/Web_Project/WebApp/Templates/NavigationBar/Login_Page.html
@@ -19,54 +19,42 @@
 </head>
 
 <body>
-    {% include 'NavigationBar/nav.html' %}
     <center>
         <form role="form" action="{% url 'Page:page_login' %}" method="POST" name="login">
             {% csrf_token %}
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 mx-auto">
-                        <div class="logo mb-3">
-                            <div class="col-md-12 text-center title">
-                                <p>SIGN IN</p>
-                            </div>
-                        </div>
-
-                        <div class="form-group form-control">
-                            <div class = "information">
-                                <label for="id_username">Account Name</label>
-                            </div>
-                            <input type="text" name="username" class="form-control" id="id_username"
-                                    aria-describedby="emailHelp" placeholder="Enter Account Name">
-                        </div>
-
-                        <div class="form-group form-control">
-                            <div class = "information">
-                                <label for="id_password">Password</label>
-                            </div>
-                            <input type="password" name="password" id="id_password" class="form-control"
-                                    aria-describedby="emailHelp" placeholder="Enter Password">
-                        </div>
-
-                        <div class="col-md-12 text-center start-button">
-                            <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm">Start explore now !</button>
-                        </div>
-
-                        <div class="col-md-12 form">
-                            <p class="text-center" id="question">Don't have account? <a href="../register_user/#" id="signup">Sign
-                                up here</a></p>
-                        </div>
-
-                        {% if error_message %}
-                        <div class="col-md-12 text-center warning">
-                            <p><strong>{{ error_message }}</strong></p>
-                        </div>
-                        {% endif %}
-                    </div>
+            <div class = "container">
+                <div class = 'title'>
+                    <h2>Đăng nhập</h2>
                 </div>
-            </div>
+
+                <div class="information">
+                    <label for="id_username">Tài khoản</label>
+                    <input type="text" name="username" id="id_username"
+                            aria-describedby="emailHelp" placeholder="Tên tài khoản">
+
+                    <label for="id_password">Mật khẩu</label>
+                    <input type="password" name="password" id="id_password"
+                            aria-describedby="emailHelp" placeholder="Mật khẩu của bạn">
+                </div>
+
+                <div class = 'sign-in'>
+                    <button type="submit">Đăng nhập</button>
+                </div>
+
+                <div class = "other">
+                    <p class="text-center" id="note"> Chưa có tài khoản ? 
+                        <a href="../register_user/#" id="link"> Đăng ký ở đây</a>
+                    </p>
+                        <a href="../" id="link"> Quay lại trang chủ </a>
+                </div>
+
+                <div class = 'warning'>
+                    {% if error_message %}
+                        <p><strong>{{ error_message }}</strong></p>
+                    {% endif %}
+                </div>
+            </div> 
         </form>
     </center>
 </body>
-
 </html>
