--- a/Web_Project/WebApp/static/style_login.css
+++ b/Web_Project/WebApp/static/style_login.css
@@ -1,53 +1,81 @@
 center{
-    /* background-color:aqua; */
-    background-image: url("background1.jpg");
+    /* background: url("login-bg.jpg") no-repeat; */
+    background: url("login-bg1.jpg") no-repeat;
+    background-size: cover;
     padding: 100px;
     height: 100vh;
 }
 .container{
-    padding: 20px;
-    background-color: lightgray;
-    box-sizing: border-box;
-    width: 50%; 
-    /* flex-wrap: wrap; */
-}
-.form-group{
-    color:blue;
-    border: 1px solid black;
-}
-.information{
-    color: blue;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    border: 1px solid grey;
+    transform: translate(-50%, -50%);
+    background-color: transparent;
+    backdrop-filter: blur(3px);
+    padding: 20px 20px;
+    width: 30%;
+
     font-style: italic;
-    font-weight: 500;
+    font-family: 'Open Sans Condensed';
+
+    -webkit-box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+}
+
+.information label{
+    width: 80%;
+    color:wheat;
+    font-size: large;
     text-align: left;
-    font-family: cursive;
-}
-.form{
-    border: 2px black;
+    margin-top: 30px;
+    margin-bottom: 0;
 }
 
-.title{
-    font-style: italic;
-    font-family: cursive;
-    font-size: x-large;
+.title h2{
+    font-size: 30;
+    color:antiquewhite;
 }
 
-.start-button {
-    font-family: monospace;
+.information input{
+    border: 1px solid grey;
+    width: 80%;
+
+    -webkit-box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
 }
 
-#question{
-    font-style: italic;
-    font-family: cursive;
+.sign-in button{
+    width: 80%;
+    background-color:slategrey;
+    margin-top: 50px;
+
+    -webkit-box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+
 }
 
-#signup{
-    font-style: italic;
-    font-family: cursive;
-    color: blue;
+.sign-in button:hover{
+    background-color:slateblue;
 }
 
+.other{
+    margin-top: 30px;
+}
+
+#note{
+    color: wheat;
+}
+
+#link{
+    font-size: large;
+    color:white;
+}
 .warning{
-    color: red;
-    font-family: monospace;
+    margin-top: 20px;
+    color:red;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
