--- a/Web_Project/WebApp/static/style_register.css
+++ b/Web_Project/WebApp/static/style_register.css
@@ -1,41 +1,82 @@
 center{
-    /* background-color:aqua; */
-    background-image: url("background1.jpg");
+    background: url("login-bg1.jpg") no-repeat;
+    background-size: cover;
     padding: 100px;
     height: 100vh;
 }
-
 .container{
-    padding: 20px;
-    background-color: lightgray;
-    box-sizing: border-box;
-    width: 50%; 
-    /* flex-wrap: wrap; */
-}
-.form-group{
-    color:blue;
-    border: 1px solid black;
-}
-.information{
-    color: blue;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    border: 1px solid grey;
+    transform: translate(-50%, -50%);
+    background-color: transparent;
+    backdrop-filter: blur(4px);
+    padding: 20px 20px;
+    width: 30%;
+
     font-style: italic;
-    font-weight: 500;
+    /* font-family: cursive; */
+    font-family: 'Open Sans Condensed';
+
+    -webkit-box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+}
+
+.information label{
+    width: 80%;
+    color:wheat;
+    /* font-size: large; */
     text-align: left;
-    font-family: cursive;
-}
-.form{
-    border: 2px black;
+    margin-top: 15px;
+    margin-bottom: 0;
 }
 
-.title{
-    font-family: cursive;
+.title h2{
+    color:white;
 }
 
-.start-button {
-    font-family: monospace;
+.textbox{
+    border: 1px solid grey;
+    width: 80%;
+
+    -webkit-box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+
+
 }
 
-#signin{
-    font-style: italic;
-    font-family: cursive;
+.sign-up button{
+    width: 80%;
+    background-color:slategrey;
+    margin-top: 40px;
+
+    -webkit-box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
+
+}
+
+.sign-up button:hover{
+    background-color:slateblue;
+}
+
+.other{
+    margin-top: 20px;
+}
+
+#note{
+    color: wheat;
+}
+
+#link{
+    font-size: large;
+    color:whitesmoke;
+}
+.warning{
+    margin-top: 10px;
+    color:red;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
