--- a/Web_Project/WebApp/static/style_register.css
+++ b/Web_Project/WebApp/static/style_register.css
@@ -1,9 +1,10 @@
 center{
     background: url("login-bg1.jpg") no-repeat;
     background-size: cover;
-    padding: 100px;
     height: 100vh;
+    padding: 100px;
 }
+
 .container{
     position: fixed;
     top: 50%;
@@ -12,11 +13,10 @@ center{
     transform: translate(-50%, -50%);
     background-color: transparent;
     backdrop-filter: blur(4px);
-    padding: 20px 20px;
+    padding: 10px 10px;
     width: 30%;
 
     font-style: italic;
-    /* font-family: cursive; */
     font-family: 'Open Sans Condensed';
 
     -webkit-box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
@@ -26,10 +26,9 @@ center{
 
 .information label{
     width: 80%;
-    color:wheat;
-    /* font-size: large; */
+    color:whitesmoke;
     text-align: left;
-    margin-top: 15px;
+    margin-top: 10px;
     margin-bottom: 0;
 }
 
@@ -51,7 +50,7 @@ center{
 .sign-up button{
     width: 80%;
     background-color:slategrey;
-    margin-top: 40px;
+    margin-top: 30px;
 
     -webkit-box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 13px 1px rgba(0,0,0,0.75);
